# Axolotl-Engine

./: .gitignore  .gitmodules  AxolotlEngine.sln.DotSettings  CMakeLists.txt
asset_preprocessor/: CMakeLists.txt  ResourceData.h  ResourceDatabase.cpp  ResourceDatabase.h  main.cpp
asset_preprocessor/Importers/: FbxImporter.cpp  FileImport.cpp  FileImport.h  ImportExtensionTypes.inl  MaterialImporter.cpp  ShaderImporter.cpp  ShaderImporterHelper.cpp  ShaderImporterHelper.h  TechniqueImporter.cpp  TextureImporter.cpp
editor/: CMakeLists.txt  EditorFileManager.cpp  EditorFileManager.h  EditorGuiSystem.cpp  EditorGuiSystem.h  EditorLocalSettings.h  Globals.cpp  Globals.h  ResourceDatabase.cpp  ResourceDatabase.h  SceneViewComponent.h  SceneViewSystem.cpp  SceneViewSystem.h  imgui.ini  main.cpp  stdafx.h
editor/Helpers/: JsonSerializable.cpp  JsonSerializable.h
editor/Import/: BaseImporter.cpp  BaseImporter.h  ImportInfo.cpp  ImportInfo.h  ImportManager.cpp  ImportManager.h  ImporterRegistrator.h
editor/Importers/: FbxImporter.cpp  FileImport.cpp  MaterialImporter.cpp  ShaderImporter.cpp  ShaderImporterHelper.h  TechniqueImporter.cpp  TextureImporter.cpp
editor/Panels/: EditorPanel.h  EntitiesPanel.cpp  EntitiesPanel.h  ProjectFilesPanel.cpp  ProjectFilesPanel.h  PropertiesPanel.cpp  PropertiesPanel.h  SceneViewPanel.cpp  SceneViewPanel.h
editor/PropertyViewers/: BasicTypesPropertyViewers.cpp  BasicTypesPropertyViewers.h  DefaultPropertyViewer.cpp  DefaultPropertyViewer.h  MathTypesPropertyViewers.cpp  MathTypesPropertyViewers.h  PropertyViewerRegistrator.h  Selection.h  TransformComponentPropertyViewer.cpp  TransformComponentPropertyViewer.h
engine/: AxolotlEngine.h  CMakeLists.txt  Defines.h  Game.cpp  Game.h  TypeHash.cpp  TypeHash.h  cpp.hint  stdafx.h
engine/Collections/: Array.h  Array.natvis  BitArray.h  Map.h  Set.h  SparseArray.h  Tuple.h
engine/Common/: Color.cpp  Color.h  Random.cpp  Random.h  ReferenceCounter.h  SharedPtr.h  SmartPointers.natvis  String.cpp  String.h  String.natvis  UniquePtr.h  WeakPtr.h
engine/Core/: Object.cpp  Object.h
engine/Debug/: Assertions.h  Debug.h
engine/Entities/: Component.cpp  Component.h  ComponentHandle.h  ComponentHandle.natvis  Entity.cpp  Entity.h  System.h  SystemBase.cpp  SystemBase.h  SystemList.cpp  SystemList.h  TransformComponent.cpp  TransformComponent.h
engine/FileSystem/: Directory.cpp  Directory.h  File.cpp  File.h  FileSystem.cpp  FileSystem.h  Guid.cpp  Guid.h
engine/Graphics/: CameraComponent.cpp  CameraComponent.h  (+11 more)
(+174 files in other folders)
